<resources>
    <string name="app_name">Diff</string>

    <string name="account_type" translatable="false">tw.tkusd.diff</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="projects">Projects</string>
    <string name="preview">Preview</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="signing_up">Signing up&#8230;</string>
    <string name="login_failed">Log in failed</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="project_list_load_failed">Project list load failed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logging_out">Logging out&#8230;</string>
    <string name="logout_failed">Log out failed</string>
    <string name="update">Update</string>
    <string name="delete_failed">Delete failed</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_msg">Enter your email here and we will send you an email with the instruction to help you reset your password.</string>
    <string name="reset_password_failed">Password reset failed. Please check if the email is correct and the network condition.</string>
    <string name="profile">Profile</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="loading">Loading&#8230;</string>
    <string name="retry">Retry</string>
    <string name="load_failed">Load failed</string>
    <string name="updating">Updating&#8230;</string>
    <string name="deleting_account">Deleting account&#8230;</string>
    <string name="update_failed">Update failed</string>
</resources>
